SKM source update
